# scm-socket

scm-agent/: dependency-reduced-pom.xml  pom.xml
scm-agent/src/main/java/com/scm/: ScmNative.java
scm-native/: CMakeLists.txt  build.sh
scm-native/include/: com_scm_ScmNative.h
scm-native/src/: scm_jni.cpp
server/: Cargo.toml
server/src/: main.rs  ns.rs  old.rs
